# fluid-settings

./: CMakeLists.txt  README.md  TODO.md
cli/: CMakeLists.txt  cli.cpp  cli.h  cli_timer.cpp  cli_timer.h  client.cpp  client.h  main.cpp
cmake/: CMakeLists.txt  FluidSettingsConfig.cmake
conf/: CMakeLists.txt  README.md  fluid-settings-cli.conf  fluid-settings.conf  fluid-settings.ini  fluid-settings.service  fluid_settings.service
conf/logger/: README.md  fluid-settings-cli.conf
daemon/: CMakeLists.txt  gossip_timer.cpp  gossip_timer.h  listener.cpp  listener.h  main.cpp  messenger.cpp  messenger.h  replicator_in.cpp  replicator_in.h  replicator_out.cpp  replicator_out.h  save_timer.cpp  save_timer.h  server.cpp  server.h  settings.cpp  settings.h  tcp_listener.cpp  tcp_listener.h  udp_listener.cpp  udp_listener.h
daemon/message-definitions/: CMakeLists.txt  FLUID_SETTINGS_ALL_VALUES.conf  FLUID_SETTINGS_CONNECTED.conf  FLUID_SETTINGS_DEFAULT_VALUE.conf  FLUID_SETTINGS_DELETE.conf  FLUID_SETTINGS_DELETED.conf  FLUID_SETTINGS_FORGET.conf  FLUID_SETTINGS_GET.conf  FLUID_SETTINGS_GOSSIP.conf  FLUID_SETTINGS_LIST.conf  FLUID_SETTINGS_LISTEN.conf  FLUID_SETTINGS_NOT_SET.conf  FLUID_SETTINGS_OPTIONS.conf  FLUID_SETTINGS_PUT.conf  FLUID_SETTINGS_READY.conf  FLUID_SETTINGS_REGISTERED.conf  FLUID_SETTINGS_UPDATED.conf  FLUID_SETTINGS_VALUE.conf  FLUID_SETTINGS_VALUE_UPDATED.conf  VALUE_CHANGED.conf
debian/: changelog  control  fluid-settings-dev.install  fluid-settings-doc.install  fluid-settings-gui.install  fluid-settings-server.install  fluid-settings-server.service  fluid-settings.install  fluid-settings.sysuser  fluid-settingsd.install  fluid-settingsd.service
doc/: CMakeLists.txt  fluid-settings.doxy.in
fluid-settings/: CMakeLists.txt  exception.h  fluid_settings_connection.cpp  fluid_settings_connection.h  names.an  settings.cpp  settings.h  settings_definitions.cpp  settings_definitions.h  value.cpp  value.h  version.cpp  version.h.in
gui/: CMakeLists.txt  fluid_settings.ui  fluid_window.cpp  fluid_window.h  main.cpp  resources.qrc
tests/: CMakeLists.txt  catch_fluid_definitions.cpp  catch_main.cpp  catch_main.h  catch_version.cpp
tools/: CMakeLists.txt  install_fluid_settings_definitions.cpp
